--- a/index.html
+++ b/index.html
@@ -1,12 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Subscription</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./assets/fs-styles.css" />
+  </head>
+  <body>
+    <!-- Page Header-->
+    <header>
+        <nav>
+        <a href="">Features</a>
+        <a href="">Details</a>
+        <a href="">Reviews</a>
+        <a href="">Plan</a>
+        <a href="">Sign Up</a>
+        </nav>  
+        <div>
+            <img height="200px" src="./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg" alt="food-img"/>
+        </div>
+        <h1>Meals Plans</h1>
+        <h1>For Everyone</h1>
+        <button>Book Now</button>
+        <button>Show me more</button>
+    </header>
+    <!-- Page Main Content-->
+    <main>
+      <!-- Features section-->
+      <section>
+        <h2>awesome features</h2>
+        <div>
+          <i class="fa-regular fa-calendar-plus"></i>
+          <h3>365 days/year</h3>
+          <p>
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style.
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-truck-fast"></i>
+          <h3>30 minutes or free</h3>
+          <p>
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
+          </p>
+        </div>
+        <div>
+          <i class="fa-solid fa-carrot"></i>
+          <h3>100% organic</h3>
+          <p>
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
+          </p>
+        </div>
+      </section>
+
+      <!-- Steps to follow section-->
+      <section>
+        <h2>steps to follow</h2>
+        <div>
+            <img src="./assets/images/Capture.PNG" alt="">
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <span>1</span>
+                    <span>Choose the subscription plan that best fits your needs and sign up today.</span>
+                </li>
+                <li>
+                    <span>2</span>
+                    <span>Order your delicious meal using our mobile app or website. Or you can even call us!</span>
+                </li>
+                <li>
+                    <span>3</span>
+                    <span>
+                        Enjoy your meal after less than 20 minutes. See you the next time!</span>
+                </li>
+            </ul>
+        </div>
+      </section>
+
+      <!-- Reviews section-->
+      <section>
+        <h2>reviews</h2>
+        <div>
+            <img src="./assets/images/customer.jpg" alt="">
+            <h3>david smith</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
+            <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+            </div>
+        </div>
+        <div>
+            <img src="./assets/images/customer.jpg" alt="">
+            <h3>david smith</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
+            <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+            </div>
+        </div>
+        <div>
+            <img src="./assets/images/customer.jpg" alt="">
+            <h3>david smith</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
+            <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+            </div>
+        </div>
+      </section>
+
+      <!-- Pricing section-->
+      <section>
+        <h2>start eating health today</h2>
+        <div>
+          <h3>Premium</h3>
+          <h4>$399/month</h4>
+          <p>That's only 13.30$ per meal</p>
+          <ul>
+            <li>1 meal every day</li>
+            <li>Order 24/7</li>
+            <li>Access to newest creations</li>
+            <li>Free delivery</li>
+          </ul>
+          <button>I'm hungry</button>
+        </div>
+
+        <div>
+          <h3>Premium</h3>
+          <h4>$399/month</h4>
+          <p>That's only 13.30$ per meal</p>
+          <ul>
+            <li>1 meal every day</li>
+            <li>Order 24/7</li>
+            <li>Access to newest creations</li>
+            <li>Free delivery</li>
+          </ul>
+          <button>I'm hungry</button>
+        </div>
+
+        <div>
+          <h3>Premium</h3>
+          <h4>$399/month</h4>
+          <p>That's only 13.30$ per meal</p>
+          <ul>
+            <li>1 meal every day</li>
+            <li>Order 24/7</li>
+            <li>Access to newest creations</li>
+            <li>Free delivery</li>
+          </ul>
+          <button>I'm hungry</button>
+        </div>
+      </section>
+
+      <!-- Contact Us section-->
+      <section>
+        <h2>contact us</h2>
+        <div>
+          <video src="./assets/videos/Avocado.mp4"></video>
+        </div>
+        <div>
+          <form action="">
+            <label for="">Name</label>
+            <input type="text" />
+
+            <label for="">Email</label>
+            <input type="email" />
+
+            <label for="">How did you find us</label>
+            <select name="" id="">
+              <option value="">Friends</option>
+              <option value="">Search</option>
+              <option value="">Advertisement</option>
+              <option value="">Other</option>
+            </select>
+
+            <label for="">Drop us a line</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type="checkbox" />
+            <label
+              >I have read and agree with all the Privacy Policy and Terms
+              Conditions</label
+            >
+            <div>
+              <input type="submit" value="Send Message"/>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
+    <!-- Page Footer-->
+    <footer>
+        <ul>
+            <a href=""> 
+                <li>About</li>
+            </a>
+            <a href=""> 
+                <li>ios App</li>
+            </a>
+            <a href=""> 
+                <li>Android App</li>
+            </a>
+        </ul>
+
+        <ul>
+            <li>
+                <i class="fa-brands fa-square-facebook"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-twitter"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+            <li>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+
+        <p>Copyright 2019 EVERYONE. All rights reverved.</p>
+
+    </footer>
+  </body>
 </html>
