--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
   <body>
     <!-- Page Header-->
     <header>
-        <nav>
+      <nav>
         <a href="">Features</a>
         <a href="">Details</a>
         <a href="">Reviews</a>
         <a href="">Plan</a>
         <a href="">Sign Up</a>
-        </nav>  
-        <div>
-            <img height="200px" src="./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg" alt="food-img"/>
-        </div>
-        <h1>Meals Plans</h1>
-        <h1>For Everyone</h1>
-        <button>Book Now</button>
-        <button>Show me more</button>
+      </nav>
+      <div>
+        <img
+          height="200px"
+          src="./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg"
+          alt="food-img"
+        />
+      </div>
+      <h1>Meals Plans</h1>
+      <h1>For Everyone</h1>
+      <button>Book Now</button>
+      <button>Show me more</button>
     </header>
     <!-- Page Main Content-->
     <main>
@@ -67,24 +71,32 @@
       <section>
         <h2>steps to follow</h2>
         <div>
-            <img src="./assets/images/Capture.PNG" alt="">
+          <img src="./assets/images/Capture.PNG" alt="" />
         </div>
         <div>
-            <ul>
-                <li>
-                    <span>1</span>
-                    <span>Choose the subscription plan that best fits your needs and sign up today.</span>
-                </li>
-                <li>
-                    <span>2</span>
-                    <span>Order your delicious meal using our mobile app or website. Or you can even call us!</span>
-                </li>
-                <li>
-                    <span>3</span>
-                    <span>
-                        Enjoy your meal after less than 20 minutes. See you the next time!</span>
-                </li>
-            </ul>
+          <ul>
+            <li>
+              <span>1</span>
+              <span
+                >Choose the subscription plan that best fits your needs and sign
+                up today.</span
+              >
+            </li>
+            <li>
+              <span>2</span>
+              <span
+                >Order your delicious meal using our mobile app or website. Or
+                you can even call us!</span
+              >
+            </li>
+            <li>
+              <span>3</span>
+              <span>
+                Enjoy your meal after less than 20 minutes. See you the next
+                time!</span
+              >
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -92,40 +104,52 @@
       <section>
         <h2>reviews</h2>
         <div>
-            <img src="./assets/images/customer.jpg" alt="">
-            <h3>david smith</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
-            <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-            </div>
+          <img src="./assets/images/customer.jpg" alt="" />
+          <h3>david smith</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
+            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
+            perferendis porro, iste voluptas!
+          </p>
+          <div>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
         </div>
         <div>
-            <img src="./assets/images/customer.jpg" alt="">
-            <h3>david smith</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
-            <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-            </div>
+          <img src="./assets/images/customer.jpg" alt="" />
+          <h3>david smith</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
+            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
+            perferendis porro, iste voluptas!
+          </p>
+          <div>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
         </div>
         <div>
-            <img src="./assets/images/customer.jpg" alt="">
-            <h3>david smith</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat perferendis porro, iste voluptas!</p>
-            <div>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-            </div>
+          <img src="./assets/images/customer.jpg" alt="" />
+          <h3>david smith</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
+            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
+            perferendis porro, iste voluptas!
+          </p>
+          <div>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
         </div>
       </section>
 
@@ -202,7 +226,7 @@
               Conditions</label
             >
             <div>
-              <input type="submit" value="Send Message"/>
+              <input type="submit" value="Send Message" />
             </div>
           </form>
         </div>
@@ -210,35 +234,34 @@
     </main>
     <!-- Page Footer-->
     <footer>
-        <ul>
-            <a href=""> 
-                <li>About</li>
-            </a>
-            <a href=""> 
-                <li>ios App</li>
-            </a>
-            <a href=""> 
-                <li>Android App</li>
-            </a>
-        </ul>
+      <ul>
+        <a href="">
+          <li>About</li>
+        </a>
+        <a href="">
+          <li>ios App</li>
+        </a>
+        <a href="">
+          <li>Android App</li>
+        </a>
+      </ul>
 
-        <ul>
-            <li>
-                <i class="fa-brands fa-square-facebook"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-twitter"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-instagram"></i>
-            </li>
-            <li>
-                <i class="fa-brands fa-instagram"></i>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <i class="fa-brands fa-square-facebook"></i>
+        </li>
+        <li>
+          <i class="fa-brands fa-twitter"></i>
+        </li>
+        <li>
+          <i class="fa-brands fa-instagram"></i>
+        </li>
+        <li>
+          <i class="fa-brands fa-instagram"></i>
+        </li>
+      </ul>
 
-        <p>Copyright 2019 EVERYONE. All rights reverved.</p>
-
+      <p>Copyright 2019 EVERYONE. All rights reverved.</p>
     </footer>
   </body>
 </html>
