--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="./assets/fs-styles.css" />
+    <!--Critical CSS-->
+    <style></style>
   </head>
   <body>
     <!-- Page Header-->
     <header>
-      <nav>
+      <nav class="top-navaigation">
         <a href="">Features</a>
         <a href="">Details</a>
         <a href="">Reviews</a>
@@ -37,191 +38,205 @@
     <main>
       <!-- Features section-->
       <section>
-        <h2>awesome features</h2>
+        <h2 class="section-header">awesome features</h2>
         <div>
-          <i class="fa-regular fa-calendar-plus"></i>
-          <h3>365 days/year</h3>
-          <p>
-            Never cook again! We really mean that. Our subscription plans
-            include up to 365 days/year coverage. You can also choose to order
-            more flexibly if that's your style.
-          </p>
-        </div>
-        <div>
-          <i class="fa-solid fa-truck-fast"></i>
-          <h3>30 minutes or free</h3>
-          <p>
-            You're only twenty minutes away from your delicious and super
-            healthy meals delivered right to your home. We work with the best
-            chefs in each town to ensure that you're 100% happy.
-          </p>
-        </div>
-        <div>
-          <i class="fa-solid fa-carrot"></i>
-          <h3>100% organic</h3>
-          <p>
-            All our vegetables are fresh, organic and local. Animals are raised
-            without added hormones or antibiotics. Good for your health, the
-            environment, and it also tastes better!
-          </p>
+          <div>
+            <i class="fa-regular fa-calendar-plus"></i>
+            <h3>365 days/year</h3>
+            <p>
+              Never cook again! We really mean that. Our subscription plans
+              include up to 365 days/year coverage. You can also choose to order
+              more flexibly if that's your style.
+            </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-truck-fast"></i>
+            <h3>30 minutes or free</h3>
+            <p>
+              You're only twenty minutes away from your delicious and super
+              healthy meals delivered right to your home. We work with the best
+              chefs in each town to ensure that you're 100% happy.
+            </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-carrot"></i>
+            <h3>100% organic</h3>
+            <p>
+              All our vegetables are fresh, organic and local. Animals are
+              raised without added hormones or antibiotics. Good for your
+              health, the environment, and it also tastes better!
+            </p>
+          </div>
         </div>
       </section>
 
       <!-- Steps to follow section-->
       <section>
-        <h2>steps to follow</h2>
+        <h2 class="section-header">steps to follow</h2>
         <div>
-          <img src="./assets/images/Capture.PNG" alt="" />
-        </div>
-        <div>
-          <ul>
-            <li>
-              <span>1</span>
-              <span
-                >Choose the subscription plan that best fits your needs and sign
-                up today.</span
-              >
-            </li>
-            <li>
-              <span>2</span>
-              <span
-                >Order your delicious meal using our mobile app or website. Or
-                you can even call us!</span
-              >
-            </li>
-            <li>
-              <span>3</span>
-              <span>
-                Enjoy your meal after less than 20 minutes. See you the next
-                time!</span
-              >
-            </li>
-          </ul>
+          <div>
+            <img src="./assets/images/Capture.PNG" alt="" />
+          </div>
+          <div>
+            <ul>
+              <li>
+                <span>1</span>
+                <span
+                  >Choose the subscription plan that best fits your needs and
+                  sign up today.</span
+                >
+              </li>
+              <li>
+                <span>2</span>
+                <span
+                  >Order your delicious meal using our mobile app or website. Or
+                  you can even call us!</span
+                >
+              </li>
+              <li>
+                <span>3</span>
+                <span>
+                  Enjoy your meal after less than 20 minutes. See you the next
+                  time!</span
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <!-- Reviews section-->
       <section>
-        <h2>reviews</h2>
+        <h2 class="section-header">reviews</h2>
         <div>
-          <img src="./assets/images/customer.jpg" alt="" />
-          <h3>david smith</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
-            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
-            perferendis porro, iste voluptas!
-          </p>
           <div>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img src="./assets/images/customer.jpg" alt="" />
+            <h3>david smith</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+              repellat perferendis porro, iste voluptas!
+            </p>
+            <div>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
           </div>
-        </div>
-        <div>
-          <img src="./assets/images/customer.jpg" alt="" />
-          <h3>david smith</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
-            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
-            perferendis porro, iste voluptas!
-          </p>
           <div>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img src="./assets/images/customer.jpg" alt="" />
+            <h3>david smith</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+              repellat perferendis porro, iste voluptas!
+            </p>
+            <div>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
           </div>
-        </div>
-        <div>
-          <img src="./assets/images/customer.jpg" alt="" />
-          <h3>david smith</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi iure
-            odio, quod nisi facilis commodi ut sunt ipsam, magnam eius repellat
-            perferendis porro, iste voluptas!
-          </p>
           <div>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <img src="./assets/images/customer.jpg" alt="" />
+            <h3>david smith</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+              repellat perferendis porro, iste voluptas!
+            </p>
+            <div>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- Pricing section-->
       <section>
-        <h2>start eating health today</h2>
+        <h2 class="section-header">start eating health today</h2>
         <div>
-          <h3>Premium</h3>
-          <h4>$399/month</h4>
-          <p>That's only 13.30$ per meal</p>
-          <ul>
-            <li>1 meal every day</li>
-            <li>Order 24/7</li>
-            <li>Access to newest creations</li>
-            <li>Free delivery</li>
-          </ul>
-          <button>I'm hungry</button>
-        </div>
+          <div>
+            <h3>Premium</h3>
+            <h4>$399/month</h4>
+            <p>That's only 13.30$ per meal</p>
+            <ul>
+              <li>1 meal every day</li>
+              <li>Order 24/7</li>
+              <li>Access to newest creations</li>
+              <li>Free delivery</li>
+            </ul>
+            <button>I'm hungry</button>
+          </div>
 
-        <div>
-          <h3>Premium</h3>
-          <h4>$399/month</h4>
-          <p>That's only 13.30$ per meal</p>
-          <ul>
-            <li>1 meal every day</li>
-            <li>Order 24/7</li>
-            <li>Access to newest creations</li>
-            <li>Free delivery</li>
-          </ul>
-          <button>I'm hungry</button>
-        </div>
+          <div>
+            <h3>Premium</h3>
+            <h4>$399/month</h4>
+            <p>That's only 13.30$ per meal</p>
+            <ul>
+              <li>1 meal every day</li>
+              <li>Order 24/7</li>
+              <li>Access to newest creations</li>
+              <li>Free delivery</li>
+            </ul>
+            <button>I'm hungry</button>
+          </div>
 
-        <div>
-          <h3>Premium</h3>
-          <h4>$399/month</h4>
-          <p>That's only 13.30$ per meal</p>
-          <ul>
-            <li>1 meal every day</li>
-            <li>Order 24/7</li>
-            <li>Access to newest creations</li>
-            <li>Free delivery</li>
-          </ul>
-          <button>I'm hungry</button>
+          <div>
+            <h3>Premium</h3>
+            <h4>$399/month</h4>
+            <p>That's only 13.30$ per meal</p>
+            <ul>
+              <li>1 meal every day</li>
+              <li>Order 24/7</li>
+              <li>Access to newest creations</li>
+              <li>Free delivery</li>
+            </ul>
+            <button>I'm hungry</button>
+          </div>
         </div>
       </section>
 
       <!-- Contact Us section-->
       <section>
-        <h2>contact us</h2>
+        <h2 class="section-header">contact us</h2>
         <div>
           <video src="./assets/videos/Avocado.mp4"></video>
         </div>
         <div>
           <form action="">
-            <label for="">Name</label>
-            <input type="text" />
+            <label for="name">Name</label>
+            <input id="name" type="text" />
 
-            <label for="">Email</label>
-            <input type="email" />
+            <label for="email">Email</label>
+            <input id="email" type="email" />
 
-            <label for="">How did you find us</label>
-            <select name="" id="">
+            <label for="findUs">How did you find us</label>
+            <select name="findUs" id="findUs">
               <option value="">Friends</option>
               <option value="">Search</option>
               <option value="">Advertisement</option>
               <option value="">Other</option>
             </select>
 
-            <label for="">Drop us a line</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <input type="checkbox" />
-            <label
+            <label for="dropUsLine">Drop us a line</label>
+            <textarea
+              name="dropUsLine"
+              id="dropUsLine"
+              cols="30"
+              rows="10"
+            ></textarea>
+
+            <input id="condtions" type="checkbox" />
+            <label for="condtions"
               >I have read and agree with all the Privacy Policy and Terms
               Conditions</label
             >
@@ -248,20 +263,22 @@
 
       <ul>
         <li>
-          <i class="fa-brands fa-square-facebook"></i>
+          <a href=""><i class="fa-brands fa-square-facebook"></i></a>
         </li>
         <li>
-          <i class="fa-brands fa-twitter"></i>
+          <a href=""> <i class="fa-brands fa-twitter"></i></a>
         </li>
         <li>
-          <i class="fa-brands fa-instagram"></i>
+          <a href=""> <i class="fa-brands fa-instagram"></i></a>
         </li>
         <li>
-          <i class="fa-brands fa-instagram"></i>
+          <a href=""> <i class="fa-brands fa-instagram"></i></a>
         </li>
       </ul>
 
       <p>Copyright 2019 EVERYONE. All rights reverved.</p>
     </footer>
+    <!--Non Critical CSS-->
+    <link rel="stylesheet" href="./assets/fs-styles.css" />
   </body>
 </html>
