--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Food Subscription</title>
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <!--Critical CSS-->
@@ -14,54 +18,70 @@
   </head>
   <body>
     <!-- Page Header-->
-    <header>
-      <nav class="top-navaigation">
-        <a href="">Features</a>
-        <a href="">Details</a>
-        <a href="">Reviews</a>
-        <a href="">Plan</a>
-        <a href="">Sign Up</a>
+    <header class="header" id="header">
+      <nav class="navigation">
+        <ul class="nav-items">
+          <li class="nav-iterm">
+            <a class="nav-item-link" href="">Features</a>
+          </li>
+          <li class="nav-iterm">
+            <a class="nav-item-link" href="">Details</a>
+          </li>
+          <li class="nav-iterm">
+            <a class="nav-item-link" href="">Reviews</a>
+          </li>
+          <li class="nav-iterm"><a class="nav-item-link" href="">Plan</a></li>
+          <li class="nav-iterm">
+            <a class="nav-item-link" href="">Sign Up</a>
+          </li>
+        </ul>
       </nav>
-      <div>
+      <!--<div>
         <img
           height="200px"
           src="./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg"
           alt="food-img"
         />
+      </div>-->
+      <div class="header-main">
+        <div class="header-main-heading">
+          <h1>Meals Plans.</h1>
+          <h1>For <span>Everyone</span></h1>
+        </div>
+        <div class="header-main-btn-group">
+          <a href="#" class="btn">Book Now</a>
+          <a href="#" class="btn btn-empty">Show me more</a>
+        </div>
       </div>
-      <h1>Meals Plans</h1>
-      <h1>For Everyone</h1>
-      <button>Book Now</button>
-      <button>Show me more</button>
     </header>
     <!-- Page Main Content-->
     <main>
       <!-- Features section-->
-      <section>
+      <section class="features">
         <h2 class="section-header">awesome features</h2>
-        <div>
-          <div>
-            <i class="fa-regular fa-calendar-plus"></i>
+        <div class="container-parent">
+          <div class="container">
+            <i class="fa-regular fa-calendar-plus icon"></i>
             <h3>365 days/year</h3>
-            <p>
+            <p class="feature-para">
               Never cook again! We really mean that. Our subscription plans
               include up to 365 days/year coverage. You can also choose to order
               more flexibly if that's your style.
             </p>
           </div>
-          <div>
-            <i class="fa-solid fa-truck-fast"></i>
+          <div class="container">
+            <i class="fa-solid fa-truck-fast icon"></i>
             <h3>30 minutes or free</h3>
-            <p>
+            <p class="feature-para">
               You're only twenty minutes away from your delicious and super
               healthy meals delivered right to your home. We work with the best
               chefs in each town to ensure that you're 100% happy.
             </p>
           </div>
-          <div>
-            <i class="fa-solid fa-carrot"></i>
+          <div class="container">
+            <i class="fa-solid fa-carrot icon"></i>
             <h3>100% organic</h3>
-            <p>
+            <p class="feature-para">
               All our vegetables are fresh, organic and local. Animals are
               raised without added hormones or antibiotics. Good for your
               health, the environment, and it also tastes better!
@@ -106,55 +126,69 @@
       </section>
 
       <!-- Reviews section-->
-      <section>
-        <h2 class="section-header">reviews</h2>
-        <div>
-          <div>
-            <img src="./assets/images/customer.jpg" alt="" />
-            <h3>david smith</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
-              repellat perferendis porro, iste voluptas!
-            </p>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+      <section class="section__reviews">
+        <div class="container-parent__reviews-layer">
+          <h2 class="section-header">reviews</h2>
+          <div class="container-parent__reviews">
+            <div class="card__review">
+              <img
+                class="card__review-img"
+                src="./assets/images/customer.jpg"
+                alt=""
+              />
+              <h3>david smith</h3>
+              <p class="card__review-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+                repellat perferendis porro, iste voluptas!
+              </p>
+              <div class="card__review-rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
-          </div>
-          <div>
-            <img src="./assets/images/customer.jpg" alt="" />
-            <h3>david smith</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
-              repellat perferendis porro, iste voluptas!
-            </p>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+            <div class="card__review">
+              <img
+                class="card__review-img"
+                src="./assets/images/customer.jpg"
+                alt=""
+              />
+              <h3>david smith</h3>
+              <p class="card__review-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+                repellat perferendis porro, iste voluptas!
+              </p>
+              <div class="card__review-rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
-          </div>
-          <div>
-            <img src="./assets/images/customer.jpg" alt="" />
-            <h3>david smith</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
-              iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
-              repellat perferendis porro, iste voluptas!
-            </p>
-            <div>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
+            <div class="card__review">
+              <img
+                class="card__review-img"
+                src="./assets/images/customer.jpg"
+                alt=""
+              />
+              <h3>david smith</h3>
+              <p class="card__review-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                iure odio, quod nisi facilis commodi ut sunt ipsam, magnam eius
+                repellat perferendis porro, iste voluptas!
+              </p>
+              <div class="card__review-rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -163,23 +197,27 @@
       <!-- Pricing section-->
       <section>
         <h2 class="section-header">start eating health today</h2>
-        <div>
-          <div>
+        <div class="cards-container">
+          <div class="card">
             <h3>Premium</h3>
-            <h4>$399/month</h4>
+            <h4>$399<span>/month</span></h4>
             <p>That's only 13.30$ per meal</p>
+            <hr />
             <ul>
               <li>1 meal every day</li>
               <li>Order 24/7</li>
               <li>Access to newest creations</li>
               <li>Free delivery</li>
             </ul>
-            <button>I'm hungry</button>
+            <hr />
+            <div class="signup-button">
+              <a href="#" class="btn">I'm hungry</a>
+            </div>
           </div>
 
-          <div>
+          <div class="card">
             <h3>Premium</h3>
-            <h4>$399/month</h4>
+            <h4>$399<span>/month</span></h4>
             <p>That's only 13.30$ per meal</p>
             <ul>
               <li>1 meal every day</li>
@@ -187,12 +225,14 @@
               <li>Access to newest creations</li>
               <li>Free delivery</li>
             </ul>
-            <button>I'm hungry</button>
+            <div class="signup-button">
+              <a href="#" class="btn">I'm hungry</a>
+            </div>
           </div>
 
-          <div>
+          <div class="card">
             <h3>Premium</h3>
-            <h4>$399/month</h4>
+            <h4>$399<span>/month</span></h4>
             <p>That's only 13.30$ per meal</p>
             <ul>
               <li>1 meal every day</li>
@@ -200,7 +240,9 @@
               <li>Access to newest creations</li>
               <li>Free delivery</li>
             </ul>
-            <button>I'm hungry</button>
+            <div class="signup-button">
+              <a href="#" class="btn">I'm hungry</a>
+            </div>
           </div>
         </div>
       </section>
@@ -208,77 +250,81 @@
       <!-- Contact Us section-->
       <section>
         <h2 class="section-header">contact us</h2>
-        <div>
+        <div class="form-container-parent">
           <video src="./assets/videos/Avocado.mp4"></video>
-        </div>
-        <div>
-          <form action="">
-            <label for="name">Name</label>
-            <input id="name" type="text" />
 
-            <label for="email">Email</label>
-            <input id="email" type="email" />
+          <div>
+            <form action="">
+              <label for="name">Name</label>
+              <input tabindex="1" id="name" type="text" />
 
-            <label for="findUs">How did you find us</label>
-            <select name="findUs" id="findUs">
-              <option value="">Friends</option>
-              <option value="">Search</option>
-              <option value="">Advertisement</option>
-              <option value="">Other</option>
-            </select>
+              <label for="email">Email</label>
+              <input tabindex="2" id="email" type="email" />
 
-            <label for="dropUsLine">Drop us a line</label>
-            <textarea
-              name="dropUsLine"
-              id="dropUsLine"
-              cols="30"
-              rows="10"
-            ></textarea>
+              <label for="findUs">How did you find us</label>
+              <select tabindex="3" name="findUs" id="findUs">
+                <option value="">Friends</option>
+                <option value="">Search</option>
+                <option value="">Advertisement</option>
+                <option value="">Other</option>
+              </select>
 
-            <input id="condtions" type="checkbox" />
-            <label for="condtions"
-              >I have read and agree with all the Privacy Policy and Terms
-              Conditions</label
-            >
-            <div>
-              <input type="submit" value="Send Message" />
-            </div>
-          </form>
+              <label for="dropUsLine">Drop us a line</label>
+              <textarea
+                tabindex="4"
+                name="dropUsLine"
+                id="dropUsLine"
+                cols="30"
+                rows="10"
+              ></textarea>
+
+              <input tabindex="5" id="condtions" type="checkbox" />
+              <label for="condtions"
+                >I have read and agree with all the Privacy Policy and Terms
+                Conditions</label
+              >
+              <div>
+                <button tabindex="6" type="submit">Send Message</button>
+              </div>
+            </form>
+          </div>
         </div>
       </section>
     </main>
     <!-- Page Footer-->
     <footer>
-      <ul>
-        <a href="">
-          <li>About</li>
-        </a>
-        <a href="">
-          <li>ios App</li>
-        </a>
-        <a href="">
-          <li>Android App</li>
-        </a>
-      </ul>
+      <div class="footer-parent">
+        <ul class="footer-text">
+          <a href="">
+            <li>About</li>
+          </a>
+          <a href="">
+            <li>ios App</li>
+          </a>
+          <a href="">
+            <li>Android App</li>
+          </a>
+        </ul>
 
-      <ul>
-        <li>
-          <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-        </li>
-        <li>
-          <a href=""> <i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href=""> <i class="fa-brands fa-instagram"></i></a>
-        </li>
-        <li>
-          <a href=""> <i class="fa-brands fa-instagram"></i></a>
-        </li>
-      </ul>
+        <ul class="social-link">
+          <li>
+            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+          </li>
+          <li>
+            <a href=""> <i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href=""> <i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""> <i class="fa-brands fa-instagram"></i></a>
+          </li>
+        </ul>
 
-      <p>Copyright 2019 EVERYONE. All rights reverved.</p>
+        <p>Copyright 2019 EVERYONE. All rights reverved.</p>
+      </div>
     </footer>
     <!--Non Critical CSS-->
-    <link rel="stylesheet" href="./assets/fs-styles.css" />
+    <link rel="stylesheet" href="./css/fs-styles.css" />
   </body>
 </html>
