--- a/index.html
+++ b/index.html
@@ -339,34 +339,37 @@
     <!-- Page Footer-->
     <footer>
       <div class="footer-parent">
-        <ul class="footer-text">
-          <a href="">
-            <li>About</li>
-          </a>
-          <a href="">
-            <li>ios App</li>
-          </a>
-          <a href="">
-            <li>Android App</li>
-          </a>
-        </ul>
+        <div class="footer-links">
+          <ul class="footer-text">
+            <a href="">
+              <li>About</li>
+            </a>
+            <a href="">
+              <li>ios App</li>
+            </a>
+            <a href="">
+              <li>Android App</li>
+            </a>
+          </ul>
 
-        <ul class="social-link">
-          <li>
-            <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-          </li>
-          <li>
-            <a href=""> <i class="fa-brands fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href=""> <i class="fa-brands fa-instagram"></i></a>
-          </li>
-          <li>
-            <a href=""> <i class="fa-brands fa-instagram"></i></a>
-          </li>
-        </ul>
-
-        <p>Copyright 2019 EVERYONE. All rights reverved.</p>
+          <ul class="social-link">
+            <li>
+              <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""> <i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href=""> <i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href=""> <i class="fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-copyright">
+          <p>Copyright 2019 EVERYONE. All rights reverved.</p>
+        </div>
       </div>
     </footer>
     <!--Non Critical CSS-->
