--- a/index.html
+++ b/index.html
@@ -14,7 +14,164 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <!--Critical CSS-->
-    <style></style>
+    <style>
+      /* START : Page style - common to all sections*/
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Kanit", sans-serif;
+      }
+
+      :root {
+        font-size: 62.5%;
+      }
+
+      p,
+      li,
+      a,
+      label,
+      option {
+        font-size: 2rem;
+        color: gray;
+      }
+
+      section {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: center;
+        margin: 6rem 0;
+      }
+
+      a {
+        text-decoration: none;
+      }
+
+      li {
+        list-style: none;
+      }
+
+      h1 {
+        font-size: 9.5rem;
+        color: #fff;
+        text-transform: uppercase;
+      }
+
+      h1 span {
+        color: #f63854;
+      }
+
+      h2 {
+        font-size: 6rem;
+        color: gray;
+        text-transform: uppercase;
+        margin: 2rem auto 2rem auto;
+      }
+
+      h2::after {
+        content: "";
+        color: #f63854;
+        display: block;
+        border-bottom: solid;
+        margin: 30px 65px;
+      }
+
+      h3 {
+        text-align: center;
+        padding: 20px;
+        font-size: 3rem;
+        text-transform: uppercase;
+        color: gray;
+      }
+
+      h4 {
+        text-align: center;
+        padding-bottom: 10px;
+        color: #f63854;
+        font-size: 40px;
+        font-weight: 500;
+      }
+
+      h4 span {
+        font-size: 15px;
+        color: gray;
+        font-weight: normal;
+      }
+      /* End : Page style - common to all sections*/
+
+      /* START : Page header*/
+      header {
+        width: 100%;
+        height: 80vh;
+        background: url("./assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg")
+          no-repeat center;
+        background-size: cover;
+        position: relative;
+      }
+      .header-layer {
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.7);
+        width: 100%;
+        height: 100%;
+      }
+      .header-main {
+        display: flex;
+        flex-direction: column;
+        margin: 16vh 20%;
+      }
+      ul.nav-items {
+        display: flex;
+        justify-content: flex-end;
+        gap: 1.5rem;
+      }
+      h1.header-main-heading {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .navigation {
+        margin: 2.5rem;
+        position: sticky;
+        top: 0px;
+      }
+
+      .nav-item-link {
+        color: #fff;
+        text-transform: uppercase;
+        font-size: 3rem;
+      }
+
+      a.btn,
+      button.btn {
+        display: inline-block;
+        color: white;
+        margin-right: 15px;
+        padding: 15px 25px;
+        background: #f63854;
+        border-radius: 64px;
+        border: 1px solid #f63854;
+        transition: transform 0.3s, color 0.3s, background-color 0.3s;
+        font-size: 3rem;
+      }
+
+      a.btn-empty {
+        color: #f63854;
+        background-color: transparent;
+      }
+
+      a.btn:hover {
+        transform: scale(1.2);
+      }
+
+      a.btn-empty:hover {
+        color: white;
+        background: #f63854;
+      }
+      /* END : Page header*/
+    </style>
   </head>
   <body>
     <!-- Page Header-->
@@ -23,17 +180,19 @@
         <nav class="navigation">
           <ul class="nav-items">
             <li class="nav-iterm">
-              <a class="nav-item-link" href="">Features</a>
+              <a class="nav-item-link" href="#features">Features</a>
             </li>
             <li class="nav-iterm">
-              <a class="nav-item-link" href="">Details</a>
+              <a class="nav-item-link" href="#details">Details</a>
             </li>
             <li class="nav-iterm">
-              <a class="nav-item-link" href="">Reviews</a>
+              <a class="nav-item-link" href="#reviews">Reviews</a>
             </li>
-            <li class="nav-iterm"><a class="nav-item-link" href="">Plan</a></li>
             <li class="nav-iterm">
-              <a class="nav-item-link" href="">Sign Up</a>
+              <a class="nav-item-link" href="#plans">Plan</a>
+            </li>
+            <li class="nav-iterm">
+              <a class="nav-item-link" href="#signup">Sign Up</a>
             </li>
           </ul>
         </nav>
@@ -43,8 +202,8 @@
             <h1>For <span>Everyone</span></h1>
           </div>
           <div class="header-main-btn-group">
-            <a href="#" class="btn">Book Now</a>
-            <a href="#" class="btn btn-empty">Show me more</a>
+            <a href="#plans" class="btn">Book Now</a>
+            <a href="#details" class="btn btn-empty">Show me more</a>
           </div>
         </div>
       </div>
@@ -52,7 +211,7 @@
     <!-- Page Main Content-->
     <main>
       <!-- Features section-->
-      <section class="features">
+      <section id="features" class="features">
         <h2 class="section-header">awesome features</h2>
         <div class="container-parent">
           <div class="container">
@@ -86,7 +245,7 @@
       </section>
 
       <!-- Steps to follow section-->
-      <section class="follow">
+      <section id="details" class="follow">
         <h2 class="section-header">steps to follow</h2>
         <div class="container-parent__follow">
           <div>
@@ -120,7 +279,7 @@
       </section>
 
       <!-- Reviews section-->
-      <section class="section__reviews">
+      <section id="reviews" class="section__reviews">
         <div class="container-parent__reviews-layer">
           <h2 class="section-header">reviews</h2>
           <div class="container-parent__reviews">
@@ -189,7 +348,7 @@
       </section>
 
       <!-- Pricing section-->
-      <section>
+      <section id="plans">
         <h2 class="section-header">start eating health today</h2>
         <div class="cards-container">
           <div class="card">
@@ -273,7 +432,7 @@
       </section>
 
       <!-- Contact Us section-->
-      <section class="section__contact">
+      <section id="signup" class="section__contact">
         <h2 class="section-header">contact us</h2>
         <div class="form-container-parent">
           <div class="contact-video">
@@ -341,29 +500,37 @@
       <div class="footer-parent">
         <div class="footer-links">
           <ul class="footer-text">
-            <a href="">
+            <a href="#details">
               <li>About</li>
             </a>
-            <a href="">
+            <a href="https://www.apple.com/in/app-store/">
               <li>ios App</li>
             </a>
-            <a href="">
+            <a href="https://play.google.com/">
               <li>Android App</li>
             </a>
           </ul>
 
           <ul class="social-link">
             <li>
-              <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+              <a href="https://www.facebook.com/"
+                ><i class="fa-brands fa-square-facebook"></i
+              ></a>
             </li>
             <li>
-              <a href=""> <i class="fa-brands fa-twitter"></i></a>
+              <a href="https://twitter.com/">
+                <i class="fa-brands fa-twitter"></i
+              ></a>
             </li>
             <li>
-              <a href=""> <i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.instagram.com/">
+                <i class="fa-brands fa-instagram"></i
+              ></a>
             </li>
             <li>
-              <a href=""> <i class="fa-brands fa-instagram"></i></a>
+              <a href="https://www.snapchat.com/">
+                <i class="fa-brands fa-square-snapchat"></i
+              ></a>
             </li>
           </ul>
         </div>
