Updating the readme

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             </ul>
             <hr />
             <div class="signup-button">
-              <a href="#" class="btn">I'm hungry</a>
+              <a href="#header" class="btn">I'm hungry</a>
             </div>
           </div>
 
@@ -399,7 +399,7 @@
             </ul>
             <hr />
             <div class="signup-button">
-              <a href="#" class="btn">I'm hungry</a>
+              <a href="#header" class="btn">I'm hungry</a>
             </div>
           </div>
 
@@ -425,7 +425,7 @@
             </ul>
             <hr />
             <div class="signup-button">
-              <a href="#" class="btn">I'm hungry</a>
+              <a href="#header" class="btn">I'm hungry</a>
             </div>
           </div>
         </div>
